apply plugin: "java"

sourceCompatibility = 1.10
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

sourceSets.main.java.srcDirs = ["src/"]


eclipse.project {
    name = appName + "-core"
}
